--- a/3177-h/3177-h.htm
+++ b/3177-h/3177-h.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta charset="UTF-8">
-    <title><title of book> | Project Gutenberg</title>
+    <title>Roughing It | Project Gutenberg</title>
     <link rel="icon" href="images/cover.jpg" type="image/x-cover">
 <style>
 
