--- a/3177-h/3177-h.htm
+++ b/3177-h/3177-h.htm
@@ -10498,7 +10498,7 @@ h2,h3 {page-break-before: avoid;}
       reported,’ or ‘It is rumored,’ or ‘We understand’
       so-and-so, but go to headquarters and get the absolute facts, and then
       speak out and say ‘It <i>is</i> so-and-so.’ Otherwise, people
-      will not put confidence in your news. Unassailable certainly is the thing
+      will not put confidence in your news. Unassailable certainty is the thing
       that gives a newspaper the firmest and most valuable reputation.”
     </p>
     <p>
@@ -12579,7 +12579,7 @@ h2,h3 {page-break-before: avoid;}
       twenty-four hours, for within that time a woman was killed by a pistol
       shot, a man was brained with a slung shot, and a man named Reeder was also
       disposed of permanently. Some matters in the Enterprise account of the
-      killing of Reeder are worth nothing—especially the accommodating
+      killing of Reeder are worth noting—especially the accommodating
       complaisance of a Virginia justice of the peace. The italics in the
       following narrative are mine:
     </p>
