--- a/3177-h/3177-h.htm
+++ b/3177-h/3177-h.htm
@@ -26,14 +26,6 @@ div.fig    { display:block; margin:0 auto; text-align:center; }
 div.chapter {page-break-before: always;}
 h2,h3 {page-break-before: avoid;}
 .x-ebookmaker-drop {}
-.big {font-size: x-large;}
-.pre {white-space: pre;}
-.cellpadding1 {padding: 1px;}
-.tdleft {text-align: left;}
-.tdcenter {text-align: center;}
-.tdright {text-align: right;}
-.valigntop {vertical-align: top;}
-.valignbottom {vertical-align: bottom;}
     </style>
   </head>
   <body>
@@ -345,7 +337,7 @@ h2,h3 {page-break-before: avoid;}
       Model Monument—What About the Ram?<br><br> <a href="#linkch54">CHAPTER
       LIV.</a> Chinese in Virginia City—Washing Bills—Habit of
       Imitation—Chinese Immigration—A Visit to Chinatown—Messrs.
-      Ah Sing, Hong Wo, See Yup, &amp;.c<br><br> <a href="#linkch55">CHAPTER
+      Ah Sing, Hong Wo, See Yup, &amp;c.<br><br> <a href="#linkch55">CHAPTER
       LV.</a> Tired of Virginia City—An Old Schoolmate—A Two Years’
       Loan—Acting as an Editor—Almost Receive an Offer—An
       Accident—Three Drunken Anecdotes—Last Look at Mt. Davidson—A
@@ -3491,7 +3483,7 @@ h2,h3 {page-break-before: avoid;}
       little Rocky Mountain news, and we gave him some Plains information in
       return. He then retired to his lonely grandeur and we climbed on up among
       the bristling peaks and the ragged clouds. South Pass City consisted of
-      four log cabins, one if which was unfinished, and the gentleman with all
+      four log cabins, one of which was unfinished, and the gentleman with all
       those offices and titles was the chiefest of the ten citizens of the
       place. Think of hotel-keeper, postmaster, blacksmith, mayor, constable,
       city marshal and principal citizen all condensed into one person and
@@ -4690,7 +4682,7 @@ h2,h3 {page-break-before: avoid;}
     </blockquote>
     <p>
       In order that the reader may observe how much more grandeur and
-      picturesqueness (as seen by these Mormon twelve) accompanied on of the
+      picturesqueness (as seen by these Mormon twelve) accompanied one of the
       tenderest episodes in the life of our Saviour than other eyes seem to have
       been aware of, I quote the following from the same “book”—Nephi:
     </p>
@@ -6425,7 +6417,7 @@ h2,h3 {page-break-before: avoid;}
       <br><br>
     </p>
     <p>
-      “Oh, don’t he <i>buck,</i> though!”
+      “Oh, don’t he <i>buck</i>, though!”
     </p>
     <p>
       While I was up, somebody struck the horse a sounding thwack with a
@@ -6563,7 +6555,7 @@ h2,h3 {page-break-before: avoid;}
       hundred a ton, in <i>gold</i>, and during the winter before that there was
       such scarcity of the article that in several instances small quantities
       had brought eight hundred dollars a ton in coin! The consequence might be
-      guessed without my telling it: peopled turned their stock loose to starve,
+      guessed without my telling it: people turned their stock loose to starve,
       and before the spring arrived Carson and Eagle valleys were almost
       literally carpeted with their carcases! Any old settler there will verify
       these statements.
@@ -7061,7 +7053,7 @@ h2,h3 {page-break-before: avoid;}
       I volunteered to drive, although I had never driven a harnessed horse
       before and many a man in such a position would have felt fairly excused
       from such a responsibility. But in a little while it was found that it
-      would be a fine thing if the drive got out and walked also. It was at this
+      would be a fine thing if the driver got out and walked also. It was at this
       time that I resigned the position of driver, and never resumed it again.
       Within the hour, we found that it would not only be better, but was
       absolutely necessary, that we four, taking turns, two at a time, should
@@ -7651,7 +7643,7 @@ h2,h3 {page-break-before: avoid;}
     </p>
     <p>
       “Look at that! Right there in that red dirt! See it? See the specks
-      of gold? And the streak of silver? That’s from the ‘Uncle Abe.’“There’s
+      of gold? And the streak of silver? That’s from the ‘Uncle Abe.’ There’s
       a hundred thousand tons like that in sight! Right in sight, mind you! And
       when we get down on it and the ledge comes in solid, it will be the
       richest thing in the world! Look at the assay! I don’t want you to
@@ -13391,7 +13383,7 @@ h2,h3 {page-break-before: avoid;}
       </p>
       <p>
         A man came rushing from a house,<br> Saying, ‘Snub up your boat I
-        pray,<br> [The customary canal technicality for ”tie up.“]<br>
+        pray,<br> [The customary canal technicality for “tie up.”]<br>
         Snub up your boat, snub up, alas,<br> Snub up while yet you may.’
       </p>
       <p>
@@ -16950,7 +16942,7 @@ h2,h3 {page-break-before: avoid;}
       as long as you please, and he will not meddle with your property; he has
       no important vices and no inclination to commit robbery on a large scale;
       but if he can get ahead of you in the horse business, he will take a
-      genuine delight in doing it. This traits is characteristic of horse
+      genuine delight in doing it. This trait is characteristic of horse
       jockeys, the world over, is it not? He will overcharge you if he can; he
       will hire you a fine-looking horse at night (anybody’s—may be
       the King’s, if the royal steed be in convenient view), and bring you
@@ -17007,7 +16999,7 @@ h2,h3 {page-break-before: avoid;}
     <p>
       Another friend of mine bought a pretty good horse from a native, a day or
       two ago, after a tolerably thorough examination of the animal. He
-      discovered today that the horse was as blind as a bat, in one eye. He
+      discovered to-day that the horse was as blind as a bat, in one eye. He
       meant to have examined that eye, and came home with a general notion that
       he had done it; but he remembers now that every time he made the attempt
       his attention was called to something else by his victimizer.
@@ -17046,7 +17038,7 @@ h2,h3 {page-break-before: avoid;}
       You give your horse a little grain once a day; it comes from San
       Francisco, and is worth about two cents a pound; and you give him as much
       hay as he wants; it is cut and brought to the market by natives, and is
-      not very good it is baled into long, round bundles, about the size of a
+      not very good; it is baled into long, round bundles, about the size of a
       large man; one of them is stuck by the middle on each end of a six foot
       pole, and the Kanaka shoulders the pole and walks about the streets
       between the upright bales in search of customers. These hay bales, thus
@@ -17183,7 +17175,7 @@ h2,h3 {page-break-before: avoid;}
       the Kanakas. I think there must be as much of a knack in handling poi as
       there is in eating with chopsticks. The forefinger is thrust into the mess
       and stirred quickly round several times and drawn as quickly out, thickly
-      coated, just as it it were poulticed; the head is thrown back, the finger
+      coated, just as if it were poulticed; the head is thrown back, the finger
       inserted in the mouth and the delicacy stripped off and swallowed—the
       eye closing gently, meanwhile, in a languid sort of ecstasy. Many a
       different finger goes into the same bowl and many a different kind of dirt
@@ -18862,7 +18854,7 @@ h2,h3 {page-break-before: avoid;}
       high-spirited, and hated the <i>tabu</i> because it restricted the
       privileges of her sex and degraded all women very nearly to the level of
       brutes. So the case stood. Liholiho had half a mind to put his foot down,
-      Kaahumahu had a whole mind to badger him into doing it, and whiskey did
+      Kaahumanu had a whole mind to badger him into doing it, and whiskey did
       the rest. It was probably the rest. It was probably the first time whiskey
       ever prominently figured as an aid to civilization. Liholiho came up to
       Kailua as drunk as a piper, and attended a great feast; the determined
@@ -18918,7 +18910,7 @@ h2,h3 {page-break-before: avoid;}
       The King sent an envoy to try and conciliate them, and came very near
       being an envoy short by the operation; the savages not only refused to
       listen to him, but wanted to kill him. So the King sent his men forth
-      under Major General Kalaimoku and the two host met a Kuamoo. The battle
+      under Major General Kalaimoku and the two host met at Kuamoo. The battle
       was long and fierce—men and women fighting side by side, as was the
       custom—and when the day was done the rebels were flying in every
       direction in hopeless panic, and idolatry and the <i>tabu</i> were dead in
@@ -19643,7 +19635,7 @@ h2,h3 {page-break-before: avoid;}
       than in spectacular effect. If one desires to be so stirred by a poem of
       Nature wrought in the happily commingled graces of picturesque rocks,
       glimpsed distances, foliage, color, shifting lights and shadows, and
-      failing water, that the tears almost come into his eyes so potent is the
+      falling water, that the tears almost come into his eyes so potent is the
       charm exerted, he need not go away from America to enjoy such an
       experience. The Rainbow Fall, in Watkins Glen (N.Y.), on the Erie railway,
       is an example. It would recede into pitiable insignificance if the callous
